--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,7 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
-  "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
-  "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "url": "postgres://qrgxguht:EvXNer7v-7h1uz2fHogbeqzvbSBQH353@hattie.db.elephantsql.com/qrgxguht",
+
+    "dialect": "postgres"
   }
 }
